<resources>
    <string name="app_name">NotDrunken</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_drink">측정</string>
    <string name="title_chart">히스토리</string>
    <string name="title_setting">설정</string>
    <string name="drink_01">잔</string>
    <string name="drink_02">마셨어!</string>
    <string name="drink_image">drink_image</string>
    <string name="button_status_change">button_status_chage</string>
    <string name="drink_03">술 섞어 마시기</string>
    <string name="drink_04">새로운 이름</string>
    <string name="drink_05">섞어!</string>
    <string name="drink_unit_kor">잔</string>
    <string name="title_activity_game">GameActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>